--- a/styles/index.css
+++ b/styles/index.css
@@ -1,1 +1,76 @@
 @import url("./something.css");
+
+/* partners */
+
+.partners-title {
+  text-align: center;
+  margin-bottom: 5%;
+  margin-top: 5%;
+  font-size: 50px;
+  color: #1c2294;
+}
+
+.partners {
+  margin-left: 25%;
+}
+
+.partners-logo {
+  margin-left: 0.95%;
+  margin-right: 0.95%;
+}
+
+/* testimony */
+
+.testemony1,
+.testemony2,
+.testemony3,
+.testemony4,
+.testemony5,
+.testemony6 {
+  display: inline-block;
+  width: 15%;
+}
+
+.testemony-container {
+  padding-left: 7%;
+}
+
+.testemony-title {
+  text-align: center;
+  margin-bottom: 5%;
+  margin-top: 5%;
+  margin-left: -8%;
+  font-size: 40px;
+  color: #1c2294;
+}
+
+.testemony-stars {
+  width: 50%;
+  height: 30%;
+  display: block;
+  margin: 0 auto;
+}
+
+.testemony-photo {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: block;
+  margin: 0 auto;
+}
+
+.testemony-info {
+  text-align: center;
+}
+
+.testemony-name-profession {
+  text-align: center;
+}
+
+.testemony-logo {
+  width: 20%;
+  height: 20%;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 20%;
+}
