--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,72 @@
 @import url("./something.css");
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  width: 100%;
+  min-height: 100vh;
+}
+
+.header {
+  width: 100%;
+  background-color: white;
+}
+
+.video-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: -1;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 30px 25px 30px 55px;
+}
+
+.nav .logo {
+  width: 80px;
+}
+
+.nav ul li {
+  list-style: none;
+  display: inline-block;
+  margin-left: 40px;
+}
+
+.nav ul li a {
+  text-decoration: none;
+  color: mediumblue;
+  font-size: 17px;
+}
+
+.content {
+  position: absolute;
+  text-align: center;
+}
+
+.content h1 {
+  font-size: 100px;
+  color: white;
+  font-weight: 600;
+}
+
+.back-video {
+  position: relative;
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+}
+
 /* partners */
 
 .partners-title {
