--- a/styles/index.css
+++ b/styles/index.css
@@ -141,3 +141,67 @@ body {
   margin: 0 auto;
   margin-bottom: 20%;
 }
+
+/* Stats */
+
+.stats1,
+.stats2,
+.stats3 {
+  display: inline-block;
+  font-size: 80px;
+  color: #1c2294;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  width: 20%;
+  padding-left: 315px;
+}
+
+.stats-info1,
+.stats-info2,
+.stats-info3 {
+  display: inline-block;
+  text-align: center;
+  font-size: 14px;
+  color: #1c2294;
+  width: 10%;
+  margin-top: -5%;
+  margin-bottom: -5%;
+  padding-left: 330px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+}
+
+.wwa1,
+.wwa2,
+.wwa3 {
+  display: inline-block;
+  width: 15%;
+}
+
+.wwa-1,
+.wwa-2,
+.wwa-3 {
+  width: 90%;
+  height: 30%;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 20%;
+}
+
+.wwa-container {
+  padding-left: 7%;
+  text-align: center;
+}
+
+.wwa-title {
+  text-align: center;
+  margin-bottom: 5%;
+  margin-top: 5%;
+  margin-left: -8%;
+  font-size: 40px;
+  color: #1c2294;
+}
+
+.wwa-info {
+  text-align: center;
+}
